--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "popper.js": "^1.12",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "vue": "^2.5.7"
-  }
+    "vue": "^2.5.7",
+    "vue-router": "^3.0.1"
+  },
+  "dependencies": {}
 }
