--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "vue": "^2.5.7",
     "vue-router": "^3.0.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.4",
+    "@fortawesome/vue-fontawesome": "0.0.22"
+  }
 }
